# piminder

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml
documentation/: MONITOR_SETUP.md  NETWORKING.md  SERVICE_SETUP.md
src/: pyproject.toml  setup.py
src/helpers/: __init__.py  classes.py  dbinit.py
src/monitor/: __main__.py  font.py  font_source_file.fnt  monitor.conf  screendriver.py
src/piminder_helpers/: __init__.py  classes.py
src/piminder_monitor/: __main__.py  monitor.conf  screendriver.py
src/piminder_service/: Dockerfile  app.py  piminder-service.conf  requirements.txt  run.py
src/piminder_service/resources/: db_autoinit.py  messages.py  unique_messages.py  users.py  utilities.py
src/pyminder_helpers/: dbinit.py
src/pyminder_monitor/: __main__.py  font.py  screendriver.py
src/pyminder_service/: Dockerfile  app.py  pyminder-service.conf  run.py
src/pyminder_service/resources/: db_autoinit.py  messages.py  users.py
src/service/: __init__.py  app.py  pyminder-service.conf  run.py
src/service/resources/: messages.py  users.py  utilities.py
